# micro-swarm

./: .gitignore  BACKLOG.md  README.md  pyproject.toml
examples/smoke-test/: README.md  setup.sh
src/micro_swarm/: __init__.py  cli.py  config.py  orchestrator.py  prompts.py  reviewer.py  segmenter.py  worktree.py
